testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment18.errors.txt
a.js(4,10): error TS2339: Property 'p' does not exist on type '{}'.
a.js(5,12): error TS2339: Property 'q' does not exist on type '{}'.
a.js(7,10): error TS2339: Property 'p' does not exist on type '{}'.
a.js(8,10): error TS2339: Property 'q' does not exist on type '{}'.
a.js(9,12): error TS2339: Property 'p' does not exist on type '{}'.
a.js(10,12): error TS2339: Property 'q' does not exist on type '{}'.


==== a.js (6 errors) ====
    var GLOBSTAR = m.GLOBSTAR = {}
    function m() {
    }
    GLOBSTAR.p = 1
             ~
!!! error TS2339: Property 'p' does not exist on type '{}'.
    m.GLOBSTAR.q = 2
               ~
!!! error TS2339: Property 'q' does not exist on type '{}'.
    
    GLOBSTAR.p
             ~
!!! error TS2339: Property 'p' does not exist on type '{}'.
    GLOBSTAR.q
             ~
!!! error TS2339: Property 'q' does not exist on type '{}'.
    m.GLOBSTAR.p
               ~
!!! error TS2339: Property 'p' does not exist on type '{}'.
    m.GLOBSTAR.q
               ~
!!! error TS2339: Property 'q' does not exist on type '{}'.
    